sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The primary account where this Time Entry will be billed to</description>
    <inlineHelpText>Primary Billing Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>