sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add this time entry to a budget to roll up costs</description>
    <label>Budget</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Budget must be related to the same Account</errorMessage>
        <filterItems>
            <field>Budget__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Select a Budget from the same Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>