sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The calender date where this time entry / work occured</description>
    <inlineHelpText>Calender date where work was done</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>