sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of the performed work</description>
    <inlineHelpText>Enter short description of the work performed</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>