sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Calculated duration in decimal hour format (3 hours 30 minutes = 3,5)</description>
    <formula>(HOUR(EndTime__c) - HOUR(StartTime__c)) + (MINUTE(EndTime__c)-MINUTE(StartTime__c)) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated duration</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>