sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Time when work was finished. Used to calculate duration.</description>
    <inlineHelpText>Time when work was finished.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>