sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Invoice that was manually or automatically created for this Time Entry. If the Invoice is set, the Time Entry is locked from modification.</description>
    <inlineHelpText>Invoice that was created from this Time Entry</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>