sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/IsInvoiced__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiced__c</fullName>
    <formula>NOT(ISBLANK(Invoice__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Invoiced</label>
    <type>Checkbox</type>
    <description>Calculates the Invoicing Status for easy SOQL from Invoice Lookup</description>
</CustomField>