sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>