sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <formula>Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Evaluates the Resource Name from lookup to display as Text in Visualforce.</description>
    <label>Consultant</label>
    <type>Text</type>
</CustomField>