sfdx-source/packaged/main/core/objects/TimeEntry__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Time when work started. Will be used to calculate duration</description>
    <inlineHelpText>Time when work started</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>