sfdx-source/packaged/main/core/objects/TimeEntry__c/validationRules/Can_Not_Remove_InvoiceLookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Remove_InvoiceLookup</fullName>
    <active>true</active>
    <description>Prevents removal of invoice, once it is set</description>
    <errorConditionFormula>ISCHANGED(Invoice__c) &amp;&amp; !ISBLANK(PRIORVALUE(Invoice__c)) &amp;&amp; !ISNEW()</errorConditionFormula>
    <errorDisplayField>Invoice__c</errorDisplayField>
    <errorMessage>Invoice can not be removed, once it is set</errorMessage>
</ValidationRule>