sfdx-source/packaged/main/core/objects/TimeEntry__c/validationRules/Can_Not_Update_Invoiced_TimeEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Update_Invoiced_TimeEntry</fullName>
    <active>true</active>
    <description>Prevents DML for auditable fields, after invoice has been set</description>
    <errorConditionFormula>AND(
  IsInvoiced__c,
  OR(
    ISCHANGED(DailyRate__c),
    ISCHANGED(StartTime__c),
    ISCHANGED(EndTime__c),    
    ISCHANGED(Product__c),
    ISCHANGED(Date__c)
  )
)</errorConditionFormula>
    <errorMessage>After it is invoiced, the following fields are locked: Invoice, Daily Rate, Start Date, End Date, Product and Date.</errorMessage>
</ValidationRule>