sfdx-source/packaged/main/core/objects/TimeEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Budget__c</columns>
    <columns>Invoice__c</columns>
    <columns>DailyRate__c</columns>
    <columns>Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <columns>IsInvoiced__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>