sfdx-source/packaged/main/core/objects/TimeEntry__c/listViews/My_Open_Time_Entries.listView-meta.xml
<ListView>
    <fullName>My_Open_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Budget__c</columns>
    <columns>Product__c</columns>
    <columns>Resource__c</columns>
    <columns>DailyRate__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsInvoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Time Entries</label>
</ListView>